<resources>
    <string name="app_name">BlankBookAndroidClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="action_settings">Settings</string>
    <string name="main_feed">Main Feed</string>
    <string name="feeds">Feeds</string>
    <string name="add_feed">add feed&#8230;</string>
    <string name="groups">Groups</string>
    <string name="add_group">add group&#8230;</string>
    <string name="preferences_file_key">ca.blankbook.blankbook.preferences</string>
    <string name="preferences_groups_key">groups</string>
    <string name="preferences_feeds_key">feeds</string>
    <string name="preferences_feed_key_prefix">feed:</string>
    <string name="preferences_group_protected_key_prefix">groupprotected:</string>
    <string name="preferences_contributor_id_prefix">contributorid</string>
    <string name="preferences_vote_prefix">contributorid</string>
    <string name="title_activity_group_search">GroupSearchActivity</string>
    <string name="search_title">Search Groups</string>
    <string name="search_hint">Group&#8230;</string>
    <string name="no_results_found">No Results Found</string>
    <string name="new_group">New Group</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="encryption">Encryption</string>
    <string name="name_taken_error">name taken</string>
    <string name="passwords_no_match_error">passwords don\'t match</string>
    <string name="error_creating_group">error creating group</string>
    <string name="new_feed">New Feed</string>
    <string name="error_creating_post">error creating post</string>
    <string name="error_creating_feed">error creating feed</string>
    <string name="encryption_error">could not encrypt data</string>
    <string name="remove">Remove</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="post_info_transition">PostInfoTransition</string>
    <string name="fab_transition">FabTransition</string>
    <string name="cancel">Cancel</string>
    <string name="copy_content">Copy Content</string>
    <string name="copy_body">Copy Body</string>
    <string name="accept">Accept</string>
    <string name="retry">Retry</string>
    <string name="error_adding_comment">Error adding comment</string>
    <string name="error_adding_post">Error adding post</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="target_group">Target group</string>
    <string name="filter">Filter</string>
    <string name="could_not_refresh_comments">Could not refresh comments</string>
    <string name="could_not_refresh_posts">Could not refresh posts</string>
</resources>
